--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   
          
   </body>
-  <script src="https://assdevmx2-coppel.cs214.force.com/quejaspublic/lightning/lightning.out.js"></script>
+  <script src="https://vassdevmx2-coppel.cs214.force.com/quejaspublic/lightning/lightning.out.js"></script>
   <!--<script type="text/javascript" src="lib/jquery.js">  </script>
   <script type="text/javascript" src="lib/jqueryCookies.js"> </script> -->
 	<!-- dev0-coppel.cs194.force.com -->
@@ -124,7 +124,7 @@
           callback();
         }
       } else {
-        var url = "https://assdevmx2-coppel.cs214.force.com/quejaspublic";
+        var url = "https://vassdevmx2-coppel.cs214.force.com/quejaspublic";
 
         $Lightning.use(
           appName, 
