--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
   
          
   </body>
-  <script src="https://coppelmx--vassdevmx2.sandbox.my.site.com/quejaspublic/lightning/lightning.out.js"></script>
+  <script src="https://coppelmx--uat.sandbox.my.site.com/quejaspublic/lightning/lightning.out.js"></script>
+  <!-- <script src="https://coppelmx--vassdevmx2.sandbox.my.site.com/quejaspublic/lightning/lightning.out.js"></script> -->
   <!--<script type="text/javascript" src="lib/jquery.js">  </script>
   <script type="text/javascript" src="lib/jqueryCookies.js"> </script> -->
 	<!-- dev0-coppel.cs194.force.com -->
@@ -124,7 +125,8 @@
           callback();
         }
       } else {
-        var url = "https://vassdevmx2-coppel.cs214.force.com/quejaspublic";
+        var url = "https://coppelmx--uat.sandbox.my.site.com/quejaspublic";
+		//var url = "https://vassdevmx2-coppel.cs214.force.com/quejaspublic";
 
         $Lightning.use(
           appName, 
