--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      Registro de quejas - Coppel
+      Asesoria y Orientaciones - Coppel
     </title>
 
     <meta charset="utf-8">
@@ -125,7 +125,8 @@
           callback();
         }
       } else {
-        var url = "https://coppelmx--uat.sandbox.my.site.com/quejaspublic";
+        var url = "https://afore-coppel--evolutivo.sandbox.my.site.com/quejas";
+        //var url = "https://coppelmx--uat.sandbox.my.site.com/quejaspublic";
 		//var url = "https://vassdevmx2-coppel.cs214.force.com/quejaspublic";
 
         $Lightning.use(
@@ -145,7 +146,7 @@
 
     function createChatterFeed() {
       setupLightning(function() {
-        $Lightning.createComponent("c:casePublicCmp", {origin: '1a07afe7fc2c54d466d12569f05fb391'}, "lexcontainer");
+        $Lightning.createComponent("c:afe_FormularioWebCls", {origin: '1a07afe7fc2c54d466d12569f05fb391'}, "lexcontainer");
       });
     }
   </script>
