--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   
          
   </body>
-  <script src="https://coppelmx--uat.sandbox.my.site.com/quejaspublic/lightning/lightning.out.js"></script>
+  <script src="https://afore-coppel--evolutivo.sandbox.my.site.com/quejas/lightning/lightning.out.js"></script>
   <!-- <script src="https://coppelmx--vassdevmx2.sandbox.my.site.com/quejaspublic/lightning/lightning.out.js"></script> -->
   <!--<script type="text/javascript" src="lib/jquery.js">  </script>
   <script type="text/javascript" src="lib/jqueryCookies.js"> </script> -->
