--- a/quejas/index.html
+++ b/quejas/index.html
@@ -106,7 +106,7 @@
   
          
   </body>
-  <script src="https://qa-coppel.cs220.force.com/quejaspublic/lightning/lightning.out.js"></script>
+  <script src="https://afore-coppel--evolutivo.sandbox.my.site.com/quejas/lightning/lightning.out.js"></script>
   <!--<script type="text/javascript" src="lib/jquery.js">  </script>
   <script type="text/javascript" src="lib/jqueryCookies.js"> </script> -->
 	<!-- dev0-coppel.cs194.force.com -->
