--- a/quejas/index.html
+++ b/quejas/index.html
@@ -84,7 +84,7 @@
 
     <nav role="navigation" class="navbar navbar-light" style="background-color: #FFE86F;">
       <a href="/quejas" class="navbar-brand">
-        <img src="https://www.coppel.com/images/emarketing/logo_80aniv2.png" style="width: 80px; background-color: yellow;">&nbsp;&nbsp;<span class="tituloHeaderCoppel">Registro de quejas - Coppel</span>
+        <img src="https://www.coppel.com/images/emarketing/logo_80aniv2.png" style="width: 80px; background-color: yellow;">&nbsp;&nbsp;<span class="tituloHeaderCoppel">Asesoria y Orientaciones - Coppel</span>
        </a>
     </nav> 
 
