--- a/quejas/index.html
+++ b/quejas/index.html
@@ -145,7 +145,7 @@
 
     function createChatterFeed() {
       setupLightning(function() {
-        $Lightning.createComponent("c:afe_FormularioWebCls", {origin: '1a07afe7fc2c54d466d12569f05fb391'}, "lexcontainer");
+        $Lightning.createComponent("c:afeFormularioWeb", {origin: '1a07afe7fc2c54d466d12569f05fb391'}, "lexcontainer");
       });
     }
   </script>
