--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           callback();
         }
       } else {
-        var url = "https://afore-coppel--evolutivo.sandbox.my.site.com/quejas";
-        //var url = "https://coppelmx--uat.sandbox.my.site.com/quejaspublic";
+        //var url = "https://afore-coppel--evolutivo.sandbox.my.site.com/quejas";
+        var url = "https://coppelmx--uat.sandbox.my.site.com/quejaspublic";
 		//var url = "https://vassdevmx2-coppel.cs214.force.com/quejaspublic";
 
         $Lightning.use(
