--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 
     function createChatterFeed() {
       setupLightning(function() {
-        $Lightning.createComponent("c:afeFormularioWeb", {origin: '1a07afe7fc2c54d466d12569f05fb391'}, "lexcontainer");
+        //$Lightning.createComponent("c:afeFormularioWeb", {origin: '1a07afe7fc2c54d466d12569f05fb391'}, "lexcontainer");
+	$Lightning.createComponent("c:casePublicCmp", {origin: '1a07afe7fc2c54d466d12569f05fb391'}, "lexcontainer");
       });
     }
   </script>
