--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
   
          
   </body>
-  <script src="https://afore-coppel--evolutivo.sandbox.my.site.com/quejas/lightning/lightning.out.js"></script>
+	<script src="https://https://coppelmx.my.site.com/quejaspublic/lightning/lightning.out.js">  </script>
+<!--   <script src="https://afore-coppel--evolutivo.sandbox.my.site.com/quejas/lightning/lightning.out.js"></script> -->
   <!-- <script src="https://coppelmx--vassdevmx2.sandbox.my.site.com/quejaspublic/lightning/lightning.out.js"></script> -->
   <!--<script type="text/javascript" src="lib/jquery.js">  </script>
   <script type="text/javascript" src="lib/jqueryCookies.js"> </script> -->
@@ -126,7 +127,8 @@
         }
       } else {
         //var url = "https://afore-coppel--evolutivo.sandbox.my.site.com/quejas";
-        var url = "https://coppelmx--uat.sandbox.my.site.com/quejaspublic";
+	var url = "https://https://coppelmx.my.site.com/quejaspublic";
+        // var url = "https://coppelmx--uat.sandbox.my.site.com/quejaspublic";
 		//var url = "https://vassdevmx2-coppel.cs214.force.com/quejaspublic";
 
         $Lightning.use(
